# Campaign-performance-agent

./: .env.example  README.md  pyproject.toml
src/hypermindz/: crew.py  main.py
src/hypermindz/config/: agents.yaml  tasks.yaml
src/hypermindz/tools/: custom_tool.py
src/hypermindz/tools/db/: __init__.py  database.py  models.py
