[project]
name = "hypermindz"
version = "0.1.0"
description = "hypermindz using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
]

[project.scripts]
hypermindz = "hypermindz.main:run"
run_crew = "hypermindz.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypermindz"]
